# Projeto_reversora

./: CMakeLists.txt  README.md  lwipopts.h  pot_mqtt.c
Desafio_05/: CMakeLists.txt  GUIA_RAPIDO.md  Kconfig  README_SISTEMA.md  setup_and_build.sh  test_api.sh
Desafio_05/main/: CMakeLists.txt  INTEGRATION_EXAMPLE.h  calibration.c  calibration.h  hello_world_main.c  index.html  main.c  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
Desafio_05/main/Include/: ds3231.c  ds3231.h  joystick_hall.c  joystick_hall.h  micro_sd.c  micro_sd.h  mqtt_send_module.c  mqtt_send_module.h  rpm_pulse_counter.c  rpm_pulse_counter.h
HomeAssistant/: README.md
HomeAssistant/config/: configuration.yaml  home-assistant.log.1  home-assistant_v2.db  home-assistant_v2.db-shm  home-assistant_v2.db-wal  mqtt.yaml
HomeAssistant/config/.storage/: assist_pipeline.pipelines  auth  auth_provider.homeassistant  core.area_registry  core.config  core.config_entries  core.device_registry  core.entity_registry  core.restore_state  core.uuid  frontend.system_data  frontend.user_data_c77be871e8134366b40b64b5f490041c  frontend_panels  homeassistant.exposed_entities  http  http.auth  lovelace.desafio_05  lovelace_dashboards  person
Reversora_ESP32/: CMakeLists.txt
Reversora_ESP32/main/: CMakeLists.txt  blink_example_main.c  rpm_pulse_counter.h
SensorHall/: CMakeLists.txt
SensorHall/Sensorhall2/: sdkconfig
SensorHall/Sensorhall2/main/: CMakeLists.txt  hello_world_main.c
Sensorhall2/: CMakeLists.txt  sdkconfig
Sensorhall2/main/: CMakeLists.txt  DS1302Manager.c  DS1302Manager.h  hello_world_main.c  joystick_hall.c  joystick_hall.h  rpm_pulse_counter.c
frontend-produmar/: README.md  package-lock.json  package.json
frontend-produmar/src/: App.vue
frontend-produmar/src/components/: Overview.vue  Rpmcard.vue  Searchbar.vue  Sidebar.vue
include/: aht10.h  fatfs.h  mqtt.h  wifi_conn.h
sd-card/: CMakeLists.txt
sd-card/main/: CMakeLists.txt  main.c
src/: aht10.c  fatfs.c  mqtt.c  wifi_conn.c
