idf_component_register(
    SRCS
        "main.c"
        "Include/mqtt_send_module.c"
        "Include/joystick_hall.c"
        "Include/rpm_pulse_counter.c"
        "Include/micro_sd.c"
        "Include/ds3231.c"
    INCLUDE_DIRS
        "Include"
    REQUIRES
        nvs_flash
        esp_timer
        esp_event
        esp_netif
        esp_wifi
        mqtt
        driver
        fatfs 
        sdmmc 
        vfs 
        esp_driver_spi
        lwip
    PRIV_REQUIRES
        spi_flash
)
